--- a/Client/Viewer/Viewer_JS.html
+++ b/Client/Viewer/Viewer_JS.html
@@ -333,7 +333,7 @@
         }
     }
 
-function renderSlideForViewing(slideIndex) {
+    function renderSlideForViewing(slideIndex) {
         if (!viewerApp.state.currentProjectData || !viewerApp.state.viewerFabricCanvas) {
             console.error("Cannot render slide: Project data or canvas not ready."); return;
         }
@@ -483,10 +483,13 @@ function renderSlideForViewing(slideIndex) {
                     obj.evented = true; 
                     obj.hoverCursor = 'pointer';
                     obj._clickAndHoldTimer = null;
-
-                    // --- ADD perPixelTargetFind FOR MORE ACCURATE HOVER ---
                     obj.perPixelTargetFind = true; 
-                    // --- END ADD ---
+
+                    // Store original opacity for hover-reveal if needed.
+                    // For now, we assume admin sets initial opacity to 0 for revealable objects.
+                    // If you want to revert to the object's actual saved opacity:
+                    // obj.originalOpacity = obj.opacity;
+
 
                     obj.off('mousedown');
                     obj.off('mouseup');
@@ -509,19 +512,46 @@ function renderSlideForViewing(slideIndex) {
                                 hideSpotlightSVG();
                             });
                         } 
+                        // --- NEW: Hover to Reveal (self, temporary) ---
+                        else if (trigger === 'hover' && action === 'reveal') {
+                            // The admin should set the initial opacity of this object to 0 (or very low).
+                            obj.on('mouseover', function() {
+                                if (this.customInteraction && this.customInteraction.trigger === 'hover' && this.customInteraction.action === 'reveal') {
+                                    console.log('Hover-Reveal: mouseover on', this.type, 'current opacity:', this.opacity);
+                                    this.animate('opacity', 1, {
+                                        duration: 250, // Quick reveal
+                                        onChange: canvas.renderAll.bind(canvas)
+                                    });
+                                }
+                            });
+                            obj.on('mouseout', function() {
+                                if (this.customInteraction && this.customInteraction.trigger === 'hover' && this.customInteraction.action === 'reveal') {
+                                    console.log('Hover-Reveal: mouseout on', this.type);
+                                    // Animate back to a hidden state.
+                                    // Assumes admin set initial opacity to 0 or low for this object.
+                                    // If you stored obj.originalOpacity, animate to that instead of 0.
+                                    this.animate('opacity', 0, { 
+                                        duration: 250, // Quick hide
+                                        onChange: canvas.renderAll.bind(canvas)
+                                    });
+                                }
+                            });
+                        }
+                        // --- END NEW: Hover to Reveal (self, temporary) ---
                         else if (trigger === 'click') {
                             obj.on('mousedown', function(options) {
                                 if (this.customInteraction && this.customInteraction.trigger === 'click') {
                                     if (this._clickAndHoldTimer) {
                                         clearTimeout(this._clickAndHoldTimer);
                                         this._clickAndHoldTimer = null;
-                                        console.log("ClickAndHold: Timer cleared by click for", this.type);
                                     }
                                     handleOverlayInteraction(this, 'click'); 
                                     if(options.e) options.e.stopPropagation();
                                 }
                             });
-                        } else if (trigger === 'hover' && action !== 'spotlight') { 
+                        } 
+                        // Ensure other hover actions (if any defined later) still go to handler
+                        else if (trigger === 'hover' && action !== 'spotlight' && action !== 'reveal') { 
                              obj.on('mouseover', function() {
                                 if (this.customInteraction && this.customInteraction.trigger === 'hover') {
                                     handleOverlayInteraction(this, 'hover');
@@ -560,7 +590,7 @@ function renderSlideForViewing(slideIndex) {
         }
         updateSlideNavigationUI(); 
     }
-    
+
     // --- Interaction & Modal Handling ---
     function handleOverlayInteraction(fabricObject, eventType) {
         if (!fabricObject.customInteraction) return;
